--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "start": "snowpack dev",
+    "start": "concurrently \"yarn fe\" \"yarn be\"",
+    "fe": "snowpack dev",
+    "be": "cd api && yarn start",
     "build": "snowpack build",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
@@ -14,7 +16,8 @@
     "netlify-lambda": "^2.0.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-query": "^3.5.16"
+    "react-query": "^3.5.16",
+    "react-use": "^15.3.8"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.11",
@@ -33,6 +36,7 @@
     "@types/snowpack-env": "^2.3.2",
     "@web/test-runner": "^0.12.0",
     "chai": "^4.2.0",
+    "concurrently": "^5.3.0",
     "prettier": "^2.0.5",
     "snowpack": "^3.0.1",
     "typescript": "^4.0.0"
