--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
     "build": "snowpack build",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
-    "postinstall": "netlify-lambda install"
+    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
-    "@stitches/react": "^0.0.2",
+    "@emotion/react": "^11.1.4",
     "evergreen-ui": "^5.1.2",
     "http-proxy": "^1.18.1",
-    "netlify-lambda": "^2.0.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-query": "^3.5.16",
-    "react-use": "^15.3.8"
+    "react-use": "^15.3.8",
+    "sort-distance": "^2.1.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.11",
@@ -29,8 +28,12 @@
     "@snowpack/plugin-typescript": "^1.2.0",
     "@snowpack/web-test-runner-plugin": "^0.2.0",
     "@testing-library/react": "^11.0.0",
+    "@types/babel__preset-env": "^7.9.1",
     "@types/chai": "^4.2.13",
+    "@types/concurrently": "^5.2.1",
+    "@types/http-proxy": "^1.17.5",
     "@types/mocha": "^8.2.0",
+    "@types/prettier": "^2.1.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/snowpack-env": "^2.3.2",
