--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@emotion/react": "^11.1.4",
     "evergreen-ui": "^5.1.2",
+    "framer-motion": "^3.2.1",
     "http-proxy": "^1.18.1",
+    "luxon": "^1.25.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-query": "^3.5.16",
     "react-use": "^15.3.8",
-    "sort-distance": "^2.1.1"
+    "sort-distance": "^2.1.1",
+    "ui-box": "^4.1.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.11",
@@ -32,6 +35,7 @@
     "@types/chai": "^4.2.13",
     "@types/concurrently": "^5.2.1",
     "@types/http-proxy": "^1.17.5",
+    "@types/luxon": "^1.25.1",
     "@types/mocha": "^8.2.0",
     "@types/prettier": "^2.1.6",
     "@types/react": "^17.0.0",
