--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@emotion/react": "^11.1.4",
+    "@parishconnect/box": "^2.3.0",
+    "@parishconnect/react-ui": "^1.6.4",
     "evergreen-ui": "^5.1.2",
     "framer-motion": "^3.2.1",
     "http-proxy": "^1.18.1",
+    "lodash-es": "^4.17.20",
     "luxon": "^1.25.0",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-query": "^3.5.16",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-use": "^15.3.8",
     "sort-distance": "^2.1.1",
     "ui-box": "^4.1.0"
@@ -35,11 +41,14 @@
     "@types/chai": "^4.2.13",
     "@types/concurrently": "^5.2.1",
     "@types/http-proxy": "^1.17.5",
+    "@types/lodash-es": "^4.17.4",
     "@types/luxon": "^1.25.1",
     "@types/mocha": "^8.2.0",
     "@types/prettier": "^2.1.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-dom": "^5.1.7",
     "@types/snowpack-env": "^2.3.2",
     "@web/test-runner": "^0.12.0",
     "chai": "^4.2.0",
