--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash-es": "^4.17.20",
     "luxon": "^1.25.0",
     "normalize.css": "^8.0.1",
+    "parishconnect-box": "^2.3.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-query": "^3.5.16",
