--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 //npm.pkg.github.com/:_authToken=${GPR_TOKEN}
-registry=https://npm.pkg.github.com/parishconnect
+//npm.pkg.github.com/parishconnect/:_authToken=${GPR_TOKEN}
+@parishconnect:registry=https://npm.pkg.github.com/
